Modify: add logger, fix cors